[package]
name = "try_api_client"
version = "0.1.0"
authors = ["OUT-Shishlov1-DA <DAShishlov1@sberbank.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = {version=   "0.8", features=["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"